# dbt-experiments

./: .env  .gitignore  .gitmodules  Tiltfile  avro-table-ddl.sql  conftest.py  dbt_project.yml  docker-compose.yml  my-avro-record.avsc  profiles.yml  pyproject.toml  pytest.ini  test_dbt_spark.py
airflow/: Dockerfile  requirements.txt
airflow/dags/: dbt_dag.py
docker/: Dockerfile  spark-defaults.conf
macros/: create_kafka_source_table_if_not_exists.sql  retrieve_max_value.sql
models/example/: kafka_direct_model.sql  my_avro_out.sq  my_first_dbt_model.sq  schema.yml
