[project]
name = "dbt-experiments"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Martin Mauch", email = "martin.mauch@gmail.com" }
]
dependencies = [
    "dbt>=1.0.0.38.4",
    "dbt-spark[session]>=1.8.0",
    "pyspark>=3.3.2,<3.4",
    "pytest>=8.2.2",
    "confluent_kafka>=2.4.0",
    "testcontainers>=3.7.1",
    "pytest-spark>=0.6.0",
    "avro>=1.11.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_experiments"]
